--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,15 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.p-0{
+  padding: 0px;
+}
+
+.color-white{
+  color: #fff;
+}
+
+.color-black{
+  color: #000;
+}
